@@ -13,6 +13,7 @@
 	- changes to build on Mac OS X using darwinports neon/beecrypt.
 	- blueprint rpm-4_4 and HEAD to minimize diff spew.
 	- add missing #if defined(ENABLE_NLS) (#146184).
+	- python: force dbMatch() h# key to be 32 bit integer (#146477).
 
 4.3.3 -> 4.4:
 	- pentium3/pentium4 arch support (pluto@PLD).
